keycloak/deployment-keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.5.5
        args: ["start"]
        ports:
        - name: http
          containerPort: 8080
        startupProbe:
          httpGet:
            path: /health/started
            port: 9000
          periodSeconds: 1
          failureThreshold: 600              
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 9000
          periodSeconds: 10
          failureThreshold: 3              
        livenessProbe:
          httpGet:
            path: /health/live
            port: 9000
          periodSeconds: 10
          failureThreshold: 3              
        resources:
          limits:
            memory: 768Mi
          requests:
            cpu: 500m
            memory: 768Mi
