keycloak/statefulset-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-postgres
spec:
  selector:
    matchLabels:
      app: keycloak-postgres
  serviceName: keycloak-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest  # Overridden
        ports:
        - containerPort: 5432
          name: pgport
        volumeMounts:
        - mountPath: /var/lib/postgresql
          name: postgres-data
      nodeSelector:
        home.bramble/has-storage: "true"
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: postgres-data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: local-path
      resources:
        requests:
          storage: 10Gi
