keycloak/service-keycloak-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-admin
  labels:
    app: keycloak
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http
    name: http
  selector:
    app: keycloak
  type: ClusterIP
