keycloak/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
spec:
  clusterIP: None
  selector:
    app: keycloak-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
