keycloak/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: keycloak
spec:
  gatewayClassName: traefik
  listeners:
  - name: websecure
    port: 9443
    protocol: HTTPS
    hostname: keycloak.bennaylor.dev
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: keycloak-tls
        namespace: keycloak
  - name: web
    port: 9080
    protocol: HTTP
    hostname: keycloak.home
