keycloak/httproute-local.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-local
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: keycloak
  hostnames:
  - keycloak.home
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: keycloak-admin
      port: 8080
      weight: 1
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: local-only
