keycloak/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-public
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: keycloak
  hostnames:
  - keycloak.bennaylor.dev
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: keycloak-admin
      port: 8080
      weight: 1
